// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`js /Users/yang/workspace/funsig/tests/fixtures/js/sample 1`] = `
[
  {
    "classes": [
      {
        "className": "Calculator",
        "lineNo": 1,
        "methods": [
          {
            "functionName": "constructor",
            "lineNo": 1,
            "parameters": [],
            "returnType": undefined,
          },
          {
            "functionName": "add",
            "lineNo": 1,
            "parameters": [
              {
                "name": "value",
                "optional": false,
                "type": "",
              },
            ],
            "returnType": undefined,
          },
          {
            "functionName": "clear",
            "lineNo": 1,
            "parameters": [],
            "returnType": undefined,
          },
        ],
        "signature": "",
      },
    ],
    "fileName": "sample.js",
    "functions": [
      {
        "functionName": "add",
        "lineNo": 1,
        "parameters": [
          {
            "name": "a",
            "optional": false,
            "type": "",
          },
          {
            "name": "b",
            "optional": false,
            "type": "",
          },
        ],
        "returnType": undefined,
      },
      {
        "functionName": "multiplyAndAdd",
        "lineNo": 1,
        "parameters": [
          {
            "name": "a",
            "optional": false,
            "type": "",
          },
          {
            "name": "b",
            "optional": false,
            "type": "",
          },
        ],
        "returnType": undefined,
      },
      {
        "functionName": "subtract",
        "lineNo": 1,
        "parameters": [
          {
            "name": "a",
            "optional": false,
            "type": "",
          },
          {
            "name": "b",
            "optional": false,
            "type": "",
          },
        ],
        "returnType": undefined,
      },
    ],
  },
]
`;

exports[`ts /Users/yang/workspace/funsig/tests/fixtures/ts/sample 1`] = `
[
  {
    "classes": [
      {
        "className": "UserManager",
        "lineNo": 1,
        "methods": [
          {
            "functionName": "addUser",
            "lineNo": 1,
            "parameters": [
              {
                "name": "user",
                "optional": false,
                "type": "Person",
              },
            ],
            "returnType": "void",
          },
          {
            "functionName": "getUserByName",
            "lineNo": 1,
            "parameters": [
              {
                "name": "name",
                "optional": false,
                "type": "string",
              },
            ],
            "returnType": "Person | undefined",
          },
          {
            "functionName": "getAllUsers",
            "lineNo": 1,
            "parameters": [],
            "returnType": "ReadonlyArray<Person>",
          },
        ],
        "signature": "",
      },
    ],
    "fileName": "sample.ts",
    "functions": [
      {
        "functionName": "add",
        "lineNo": 1,
        "parameters": [
          {
            "name": "a",
            "optional": false,
            "type": "number",
          },
          {
            "name": "b",
            "optional": false,
            "type": "number",
          },
        ],
        "returnType": "number",
      },
      {
        "functionName": "processItems",
        "lineNo": 1,
        "parameters": [
          {
            "name": "items",
            "optional": false,
            "type": "T[]",
          },
        ],
        "returnType": "string[]",
      },
      {
        "functionName": "multiply",
        "lineNo": 1,
        "parameters": [
          {
            "name": "a",
            "optional": false,
            "type": "number",
          },
          {
            "name": "b",
            "optional": false,
            "type": "number",
          },
        ],
        "returnType": "number",
      },
      {
        "functionName": "constructor",
        "lineNo": 1,
        "parameters": [
          {
            "name": "serviceUrl",
            "optional": false,
            "type": "",
          },
        ],
        "returnType": undefined,
      },
    ],
  },
]
`;
